<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/about_header"
        android:layout_width="fill_parent" 
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:background="@color/darkturquoise"
        android:layout_gravity="top"
        android:contentDescription="@string/title_bar" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_header"
        android:layout_above="@+id/about_foot"
        android:orientation="vertical" >
        
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center_horizontal"
	        android:textColor="@color/darkturquoise"
	        android:text="@string/dots"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:id="@+id/about_dots" />
	    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center_horizontal"
	        android:textSize="16sp"
	        android:textColor="@android:color/white"
	        android:id="@+id/license_text"/>
	    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:gravity="center_horizontal"
	        android:textSize="30sp"
	        android:textColor="@android:color/white"
	        android:textStyle="bold"
	        android:contentDescription="@string/about_app"
	        android:id="@+id/about_text"/>
	    
	    <ImageView 
	        android:id="@+id/companylogo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="center_horizontal"
	        android:adjustViewBounds="true"
	        android:src="@drawable/logo"
	        android:contentDescription="@string/copyright_image"/>
	    
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center_horizontal"
	        android:textColor="@android:color/white"
	        android:text="@string/text_copyright"
	        android:contentDescription="@string/about_app"
	        android:id="@+id/copyright_text" />
    
    </LinearLayout>
    
    <ImageView android:id="@id/about_foot"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_above="@+id/ad"
        android:background="@color/darkturquoise"
        android:contentDescription="@string/footer" />
    
    <com.google.ads.AdView
        android:id="@id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adUnitId="2b332688404c4f06"
        ads:loadAdOnCreate="true"
        ads:adSize="BANNER" />
    
</RelativeLayout>
