<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/black"
        android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/installed_header"
        android:layout_width="fill_parent" 
        android:layout_height="25dp"
        android:background="@color/darkturquoise"
        android:layout_gravity="top"
        android:contentDescription="@string/title_bar" />
        
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/darkturquoise"
	        android:text="@string/dots"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:includeFontPadding="false"
	        android:id="@+id/installed_dots" />
	    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
	        android:gravity="center_horizontal"
	        android:textSize="34sp"
	        android:textColor="@android:color/white"
	        android:textStyle="bold"
	        android:id="@+id/installed_text" />
	    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:gravity="center_horizontal"
	        android:textSize="34sp"
	        android:textColor="@android:color/white"
	        android:textStyle="bold"
	        android:id="@+id/installed_text2"/>
	    
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/darkturquoise"
	        android:text="@string/dots"
	        android:textStyle="bold"
	        android:textSize="20sp"
	        android:includeFontPadding="false"
	        android:id="@+id/installed_dots2" />
    
    
    
    <ImageView android:id="@+id/installed_foot"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:background="@color/darkturquoise"
        android:contentDescription="@string/footer" />
    
    <com.google.ads.AdView
        android:id="@+id/installed_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="2b332688404c4f06"
        ads:loadAdOnCreate="true"
        ads:adSize="BANNER" />
    
</LinearLayout>